--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
 
 dependencies {
     implementation 'io.github.pilgr:paperdb:2.7.2'
+    dependencies {
+        implementation 'com.github.bumptech.glide:glide:4.15.1'
+        annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+    }
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
